[project]
name = "hello-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-vertexai>=3.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langchain-unstructured>=1.0.1",
    "libmagic>=1.0",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "unstructured>=0.18.27",
]
